--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.18",
