--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -129,6 +130,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+/config
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
